--- a/original/css/stylesheet.css
+++ b/original/css/stylesheet.css
@@ -4,14 +4,21 @@
 	box-sizing: border-box;
 }
 
-/*.parallax-window {
+.parallax-window {
     min-height: 400px;
     background: transparent;
-}*/
+}
+
+.img {
+	height: 600px;
+    opacity:0.5;
+}
+
+
 /*<!-- ここからtop -->*/
 
 .top-wrapper {
- background-image: url(../img/TOP_pexels-photo-185933.jpeg);
+ /*background-image: url(../img/TOP_pexels-photo-185933.jpeg);*/
  background-size :cover;
   width:100%;
   height:100vh;
@@ -128,7 +135,9 @@ h3 {
 	padding-bottom:80px;
 }
 
-
+.img {
+	height: 600px;
+}
 
 /*<!-- ここからJournal/Life -->*/
 
